--- a/pr-preview/pr-4/books/flatland/concerning-a-stranger/index.html
+++ b/pr-preview/pr-4/books/flatland/concerning-a-stranger/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Concerning a Stranger from Spaceland | Flatland: A Romance of Many Dimensions | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="A classic mathematical fiction by Edwin A. Abbott">
-  <link rel="stylesheet" href="/assets/pressy-entry-xg2G9h26.css">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="stylesheet" href="../../../assets/pressy-entry-xg2G9h26.css">
+  <link rel="manifest" href="../../../manifest.webmanifest">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/books-flatland-concerning-a-stranger-BCGhbGL6.js"></script>
+  <script type="module" src="../../../assets/books-flatland-concerning-a-stranger-DQlx9XKd.js"></script>
 </body>
 </html>
