--- a/pr-preview/pr-4/books/flatland/index.html
+++ b/pr-preview/pr-4/books/flatland/index.html
@@ -8,12 +8,12 @@
 Writing pseudonymously as "A Square", Abbott uses the fictional two-dimensional world
 of Flatland to offer pointed observations on the social hierarchy of Victorian culture.
 ">
-  <link rel="stylesheet" href="/assets/pressy-entry-xg2G9h26.css">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="stylesheet" href="../../assets/pressy-entry-xg2G9h26.css">
+  <link rel="manifest" href="../../manifest.webmanifest">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/books-flatland-C9lEgQUG.js"></script>
+  <script type="module" src="../../assets/books-flatland-D_TRz1e4.js"></script>
 </body>
 </html>
