--- a/pr-preview/pr-4/books/flatland/of-the-climate-and-houses/index.html
+++ b/pr-preview/pr-4/books/flatland/of-the-climate-and-houses/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Of the Climate and Houses in Flatland | Flatland: A Romance of Many Dimensions | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="A classic mathematical fiction by Edwin A. Abbott">
-  <link rel="stylesheet" href="/assets/pressy-entry-xg2G9h26.css">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="stylesheet" href="../../../assets/pressy-entry-xg2G9h26.css">
+  <link rel="manifest" href="../../../manifest.webmanifest">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/books-flatland-of-the-climate-and-houses-Coy3HdFX.js"></script>
+  <script type="module" src="../../../assets/books-flatland-of-the-climate-and-houses-D-rSlMFa.js"></script>
 </body>
 </html>
