Deploy preview for PR 1 🛫

--- a/pr-preview/pr-1/books/index.html
+++ b/pr-preview/pr-1/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-DZ4bhSa3.js"></script>
+  <script type="module" src="../assets/books-BB86ZPCY.js"></script>
 </body>
 </html>
