deploy: 8179061e46a774fddf1b32573aeac54ab86c7250

--- a/books/flatland/index.html
+++ b/books/flatland/index.html
@@ -10,10 +10,14 @@ of Flatland to offer pointed observations on the social hierarchy of Victorian c
 ">
   <link rel="stylesheet" href="../../assets/pressy-entry-xg2G9h26.css">
   <link rel="manifest" href="../../manifest.webmanifest">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#1a1a1a">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Flatland">
+  <link rel="apple-touch-icon" href="../../icon-192.png">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../../assets/books-flatland-D_TRz1e4.js"></script>
+  <script type="module" src="../../assets/books-flatland-BerqrE3T.js"></script>
 </body>
 </html>
