--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-BB86ZPCY.js"></script>
+  <script type="module" src="../assets/books-iIobwmKR.js"></script>
 </body>
 </html>
