--- a/pr-preview/pr-6/books/index.html
+++ b/pr-preview/pr-6/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-BlovNn9K.js"></script>
+  <script type="module" src="../assets/books-BvrGbVKA.js"></script>
 </body>
 </html>
