Deploy preview for PR 7 🛫

--- a/pr-preview/pr-7/books/index.html
+++ b/pr-preview/pr-7/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-Nal4e4qx.js"></script>
+  <script type="module" src="../assets/books-Cv8crtva.js"></script>
 </body>
 </html>
