deploy: fb98070436651f6fcc5efcacee96ad461083fc12

--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-Cv8crtva.js"></script>
+  <script type="module" src="../assets/books-Dgj6qJ2E.js"></script>
 </body>
 </html>
