deploy: 1d3675a9cc496389e955929d33115ab9fab81389

--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-CnxaDAVW.js"></script>
+  <script type="module" src="../assets/books-DYzLiKoP.js"></script>
 </body>
 </html>
