--- a/pr-preview/pr-13/books/index.html
+++ b/pr-preview/pr-13/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-DD43XSPv.js"></script>
+  <script type="module" src="../assets/books-BFjr4lro.js"></script>
 </body>
 </html>
