deploy: 37ad7f81bf7501aff5da25905fc4c15df4337a75

--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-DYzLiKoP.js"></script>
+  <script type="module" src="../assets/books-BFjr4lro.js"></script>
 </body>
 </html>
