deploy: 06124ca5ce169cc64e6e7fc93e8549ca2907b2db

--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-BFjr4lro.js"></script>
+  <script type="module" src="../assets/books-B4Kuf1M4.js"></script>
 </body>
 </html>
