--- a/books/flatland/index.html
+++ b/books/flatland/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flatland: A Romance of Many Dimensions | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="Flatland is an 1884 satirical novella by the English schoolmaster Edwin Abbott Abbott.
-Writing pseudonymously as "A Square", Abbott uses the fictional two-dimensional world
+Writing pseudonymously as &quot;A Square&quot;, Abbott uses the fictional two-dimensional world
 of Flatland to offer pointed observations on the social hierarchy of Victorian culture.
 ">
   <link rel="stylesheet" href="../../assets/pressy-entry-tJh9F8So.css">
@@ -18,6 +18,6 @@ of Flatland to offer pointed observations on the social hierarchy of Victorian c
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../../assets/books-flatland-wUBP1U_y.js"></script>
+  <script type="module" src="../../assets/books-flatland-De1Q21Md.js"></script>
 </body>
 </html>
