deploy: 852f5db06ecb9e5c3c4f4ad854b7187d2be132a2

--- a/books/index.html
+++ b/books/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-CEPOlfsA.js"></script>
+  <script type="module" src="../assets/books-CGMgsnkS.js"></script>
 </body>
 </html>
