--- a/books/flatland/index.html
+++ b/books/flatland/index.html
@@ -8,16 +8,17 @@
 Writing pseudonymously as &quot;A Square&quot;, Abbott uses the fictional two-dimensional world
 of Flatland to offer pointed observations on the social hierarchy of Victorian culture.
 ">
-  <link rel="stylesheet" href="../../assets/pressy-entry-IdBWmwWE.css">
+  <link rel="stylesheet" href="../../assets/pressy-entry-BIzKIDDA.css">
   <link rel="manifest" href="../../manifest.webmanifest">
   <meta name="theme-color" content="#1a1a1a">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="Flatland">
   <link rel="apple-touch-icon" href="../../icon-192.png">
+  <link rel="icon" href="../../favicon.png" type="image/png">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../../assets/books-flatland-CHW9Ct1-.js"></script>
+  <script type="module" src="../../assets/books-flatland-B8xYSZIa.js"></script>
 </body>
 </html>
