deploy: 36a0e1acf3a549b40e217630cd67387536bd2219

--- a/books/index.html
+++ b/books/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-CV0O0aiE.js"></script>
+  <script type="module" src="../assets/books-ItFvIfHe.js"></script>
 </body>
 </html>
