deploy: 436a563eaf9a0e67669f9820324efdd4b25cf2d1

--- a/books/flatland/concerning-a-stranger/index.html
+++ b/books/flatland/concerning-a-stranger/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Concerning a Stranger from Spaceland | Flatland: A Romance of Many Dimensions | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="A classic mathematical fiction by Edwin A. Abbott">
   <link rel="stylesheet" href="../../../assets/pressy-entry-BIzKIDDA.css">
@@ -16,6 +16,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../../../assets/books-flatland-concerning-a-stranger-B1g5M74O.js"></script>
+  <script type="module" src="../../../assets/books-flatland-concerning-a-stranger-DObkO41E.js"></script>
 </body>
 </html>
