--- a/books/flatland/index.html
+++ b/books/flatland/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Flatland: A Romance of Many Dimensions | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="Flatland is an 1884 satirical novella by the English schoolmaster Edwin Abbott Abbott.
 Writing pseudonymously as &quot;A Square&quot;, Abbott uses the fictional two-dimensional world
@@ -19,6 +19,6 @@ of Flatland to offer pointed observations on the social hierarchy of Victorian c
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../../assets/books-flatland-q2Gf26St.js"></script>
+  <script type="module" src="../../assets/books-flatland-C1fYs_pT.js"></script>
 </body>
 </html>
