--- a/books/index.html
+++ b/books/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Books | Flatland: A Romance of Many Dimensions</title>
   <meta name="description" content="A classic mathematical fiction by Edwin A. Abbott">
   <link rel="stylesheet" href="../assets/pressy-entry-BIzKIDDA.css">
@@ -16,6 +16,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-ItFvIfHe.js"></script>
+  <script type="module" src="../assets/books-BfACb1B7.js"></script>
 </body>
 </html>
