--- a/books/index.html
+++ b/books/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="../assets/books-BfACb1B7.js"></script>
+  <script type="module" src="../assets/books-DcPdUw18.js"></script>
 </body>
 </html>
